# gcodekit4

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGNER_IMPLEMENTATION.md  DESIGNER_PHASE2_COMPLETE.md  DESIGNER_PHASE2_STATUS.md  DESIGNER_PHASE4_PROGRESS.md  DESIGNER_PHASE4_STATUS.md  DESIGNER_PHASE5_COMPLETION.md  DESIGNER_PHASE5_PROGRESS.md  DESIGNER_PHASE6_PLAN.md  EFFICIENCY_REPORT.md  FINAL_STATUS.md  KEYBINDINGS.md  MENU_WIRING_SUMMARY.txt  Notes.md  PHASE_5_COMPLETION.md  PLAN.md  README.md  README.md.new  REDDIT.md  RELEASE.md  SLINT.md  SPEC.md  STATS.md  TOOLCHAIN.md  build.rs  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  check_output_5.txt  check_output_6.txt  check_output_7.txt  check_output_canvas_refactor.txt  check_output_canvas_refactor_2.txt  check_output_canvas_refactor_3.txt  check_output_canvas_refactor_4.txt  check_output_final.txt  (+9 more)
crates/gcodekit4-camtools/: Cargo.toml
crates/gcodekit4-camtools/src/: advanced_features_panel.rs  arc_expander.rs  comment_processor.rs  hatch_generator.rs  jigsaw_puzzle.rs  laser_engraver.rs  lib.rs  speeds_feeds.rs  spoilboard_grid.rs  spoilboard_surfacing.rs  tabbed_box.rs  validator.rs  vector_engraver.rs
crates/gcodekit4-camtools/tests/: engravers_tests.rs  lib.rs  processing_tabbed_box.rs  processing_tabbed_box_debug.rs  processing_tabbed_box_user_bug.rs
crates/gcodekit4-camtools/tests/engravers/: hatch_generator.rs  laser_engraver.rs  mod.rs  svg_to_gcode.rs  vector_engraver.rs  vector_engraver_mirroring.rs  vector_engraver_multipass.rs
crates/gcodekit4-camtools/tests/generators/: jigsaw_puzzle.rs  mod.rs  spoilboard_grid_test.rs
crates/gcodekit4-camtools/tests/processing/: advanced_features.rs  comment_processor.rs  mod.rs  speeds_feeds.rs  stats.rs  tabbed_box.rs  tabbed_box_debug.rs  tabbed_box_user_bug.rs  validator.rs
crates/gcodekit4-camtools/tests/ui/: advanced_features_panel.rs  mod.rs
crates/gcodekit4-camtools/ui/: jigsaw_puzzle_dialog.slint  laser_engraver_dialog.slint  speeds_feeds_dialog.slint  spoilboard_grid_dialog.slint  spoilboard_surfacing_dialog.slint  tabbed_box_dialog.slint  vector_engraver_dialog.slint
crates/gcodekit4-communication/: Cargo.toml
crates/gcodekit4-communication/src/: lib.rs
crates/gcodekit4-communication/src/communication/: buffered.rs  mod.rs  serial.rs  tcp.rs
crates/gcodekit4-communication/src/firmware/: capabilities.rs  capabilities_db.rs  capability_manager.rs  connection_watch.rs  device_db.rs  file_service.rs  (+6 more)
crates/gcodekit4-core/: Cargo.toml
crates/gcodekit4-core/src/: error.rs  lib.rs  units.rs
crates/gcodekit4-core/tests/: materials_tests.rs
crates/gcodekit4-designer/: Cargo.toml
crates/gcodekit4-designer/src/: adaptive.rs  arrays.rs  canvas.rs  commands.rs  designer_editor_integration.rs  designer_state.rs  designer_visualizer_integration.rs  drilling_patterns.rs  dxf_parser.rs  font_manager.rs  gcode_gen.rs  history.rs  import.rs  lib.rs  multipass.rs  parametric.rs  pocket_operations.rs  render_optimizer.rs  renderer.rs  selection_manager.rs  serialization.rs  shape_store.rs  shapes.rs  spatial_index.rs  spatial_manager.rs  svg_renderer.rs  templates.rs  tool_library.rs  toolpath.rs  toolpath_simulation.rs  vcarve.rs  viewport.rs
crates/gcodekit4-designer/tests/: core.rs  designer_adaptive_integration.rs  designer_arrays_integration.rs  designer_dxf_integration.rs  designer_handle_drag_bug.rs  designer_import_integration.rs  designer_import_mirroring.rs  designer_integration.rs  designer_mouse_event_mapping.rs  designer_pan_on_drag.rs  designer_parametric_integration.rs  designer_phase3_cam_ops.rs  designer_shift_key_snapping.rs  designer_state_integration.rs  designer_templates_test.rs  designer_vcarve_integration.rs  designer_viewport_coordinate_mapping.rs  io.rs  lib.rs
crates/gcodekit4-designer/ui/: designer.slint
crates/gcodekit4-devicedb/: Cargo.toml
crates/gcodekit4-devicedb/src/: lib.rs  manager.rs  model.rs  traits.rs  ui_integration.rs
crates/gcodekit4-devicedb/tests/: integration_tests.rs
crates/gcodekit4-devicedb/ui/: device_manager.slint
crates/gcodekit4-gcodeeditor/: Cargo.toml
crates/gcodekit4-gcodeeditor/src/: lib.rs  slint_bridge.rs  text_buffer.rs  undo_manager.rs  viewport.rs
crates/gcodekit4-gcodeeditor/tests/: editor_state_test.rs  lib.rs  slint_bridge_test.rs  test_gcode_editor_integration.rs  test_textedit_content.rs  text_buffer_test.rs  undo_manager_test.rs  viewport_test.rs
crates/gcodekit4-gcodeeditor/ui/: custom_text_edit.slint  gcode_editor.slint
crates/gcodekit4-parser/: Cargo.toml
crates/gcodekit4-parser/src/: designer_state.rs  lib.rs
crates/gcodekit4-settings/: Cargo.toml
crates/gcodekit4-settings/src/: config.rs  controller.rs  lib.rs  manager.rs  persistence.rs  view_model.rs
crates/gcodekit4-settings/tests/: persistence_test.rs  view_model_test.rs
crates/gcodekit4-settings/ui/: settings_dialog.slint
crates/gcodekit4-ui/: Cargo.toml  build.rs  ui.slint
crates/gcodekit4-ui/src/: config.rs  lib.rs  platform.rs
crates/gcodekit4-ui/tests/: lib.rs  ui_tests.rs  visualizer_coordinate_transforms.rs
crates/gcodekit4-ui/ui/: architecture.rs  connection_panel.rs  console_panel.rs  device_console_manager.rs  firmware_integration.rs  firmware_settings_panel.rs  gcode_editor.rs  layout_manager.rs  macros_panel.rs  main_window.rs  materials_manager_backend.rs  mod.rs  progress_indicators.rs  theme.slint  tools_manager_backend.rs  ui_polish.rs
crates/gcodekit4-ui/ui_panels/: cam_tools.slint  config_settings.slint  designer.slint  device_console.slint  device_info.slint  error_dialog.slint  gcode_editor.slint  gcode_visualizer.slint  jigsaw_puzzle_dialog.slint  laser_engraver_dialog.slint  machine_control.slint  materials_manager.slint  success_dialog.slint  tabbed_box_dialog.slint  tools_manager.slint  vector_engraver_dialog.slint
crates/gcodekit4-visualizer/: Cargo.toml
crates/gcodekit4-visualizer/src/: lib.rs
crates/gcodekit4-visualizer/tests/: visualizer_coordinate_transforms.rs
crates/gcodekit4-visualizer/ui/: gcode_visualizer.slint
(+597 files in other folders)
