[workspace]
members = [
    "crates/gcodekit4-core",
    "crates/gcodekit4-communication",
    "crates/gcodekit4-camtools",
    "crates/gcodekit4-designer",
    "crates/gcodekit4-gcodeeditor",
    "crates/gcodekit4-visualizer",
    "crates/gcodekit4-settings",
    "crates/gcodekit4-devicedb",
    "crates/gcodekit4-ui",
]
resolver = "2"

[workspace.package]
version = "0.43.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["GCodeKit Contributors"]
repository = "https://github.com/thawkins/gcodekit4"

[package]
name = "gcodekit4"
version.workspace = true
edition.workspace = true
description = "A Rust-based Universal G-Code Sender for CNC machines with support for GRBL, TinyG, g2core, Smoothieware, and FluidNC controllers"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[dependencies]
gcodekit4-core = { path = "crates/gcodekit4-core" }
gcodekit4-communication = { path = "crates/gcodekit4-communication" }
gcodekit4-camtools = { path = "crates/gcodekit4-camtools" }
gcodekit4-designer = { path = "crates/gcodekit4-designer" }
gcodekit4-gcodeeditor = { path = "crates/gcodekit4-gcodeeditor" }
gcodekit4-visualizer = { path = "crates/gcodekit4-visualizer" }
gcodekit4-settings = { path = "crates/gcodekit4-settings" }
gcodekit4-devicedb = { path = "crates/gcodekit4-devicedb" }
gcodekit4-ui = { path = "crates/gcodekit4-ui" }

slint = { version = "1.14.1", features = ["backend-winit", "image-default-formats"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"
rfd = "0.15.4"
arboard = "3.4"
serde_json = "1.0"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }

# Build dependencies
[build-dependencies]
chrono = "0.4"
slint-build = "1.14.1"

# Testing utilities
[dev-dependencies]
tempfile = "3.8"

