[package]
name = "gcodekit4-camtools"
version.workspace = true
edition.workspace = true
description = "CAM (Computer-Aided Manufacturing) tools and special processing for GCodeKit4"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
gcodekit4-core = { path = "../gcodekit4-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
regex = "1.10"
svg = "0.18"
dxf = "0.4"
pepecore = "0.1.3"
lazy_static = "1.4"
