[package]
name = "gcodekit4-communication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Communication protocols (Serial, TCP, WebSocket) for GCodeKit4"

[dependencies]
gcodekit4-core = { path = "../gcodekit4-core" }
gcodekit4-parser = { path = "../gcodekit4-parser" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serialport = "4.3"
tokio-serial = "5.1"
tokio-tungstenite = "0.28.0"
hyper = { version = "1.7.0", features = ["full"] }
http = "1.3.1"
thiserror = "2.0.17"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
crossbeam-channel = "0.5"
regex = "1.10"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13.1"
tempfile = "3.8"
