[package]
name = "gcodekit4-communication"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Communication protocols (Serial, TCP, WebSocket) for GCodeKit4"

[dependencies]
gcodekit4-core = { path = "../gcodekit4-core" }
gcodekit4-parser = { path = "../gcodekit4-parser" }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serialport = "4.3"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"

[dev-dependencies]
