[package]
name = "gcodekit4-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types, traits, and utilities for GCodeKit4"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
futures = "0.3"
zip = "2.2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13.1"
tempfile = "3.8"
