[package]
name = "gcodekit4-devicedb"
version = "0.1.0"
edition = "2021"
description = "Device profile management for GCodeKit4"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
slint = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lib]
path = "src/lib.rs"
