[package]
name = "gcodekit4-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "G-code parsing and processing for GCodeKit4"

[dependencies]
gcodekit4-core = { path = "../gcodekit4-core" }
regex = "1.10"
lazy_static = "1.4"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
svg = "0.18"
dxf = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
image = "0.25"

[dev-dependencies]
