[package]
name = "gcodekit4-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration and settings management for GCodeKit4"

[dependencies]
gcodekit4-core = { path = "../gcodekit4-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
dirs = "5.0"
