[package]
name = "gcodekit4-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Slint-based user interface for GCodeKit4"

[dependencies]
gcodekit4-core = { path = "../gcodekit4-core" }
gcodekit4-communication = { path = "../gcodekit4-communication" }
gcodekit4-camtools = { path = "../gcodekit4-camtools" }
gcodekit4-designer = { path = "../gcodekit4-designer" }
gcodekit4-gcodeeditor = { path = "../gcodekit4-gcodeeditor" }
gcodekit4-visualizer = { path = "../gcodekit4-visualizer" }
slint = { version = "1.14.1", features = ["backend-winit", "image-default-formats"] }
rfd = "0.15.4"
config = "0.15.18"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
ropey = "1.6"

[build-dependencies]
chrono = "0.4"
slint-build = "1.14.1"

[dev-dependencies]
tempfile = "3.8"
